tests/negative/typecheck/immutable_misc.orng
// immutable_misc.orng:6:7: error: the type `Int` does not implement the trait `Index_Mut`
//     0[0] = 4
//      ^
// 
fn main() -> Int {
    0[0] = 4
    0
}